--- a/NMSSaveManager/NMSSaveManager.csproj
+++ b/NMSSaveManager/NMSSaveManager.csproj
@@ -5,16 +5,18 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Description>Manage No Man's Sky save files</Description>
     <Authors>Kevin0M16</Authors>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="K4os.Compression.LZ4" Version="1.2.16" />
-    <PackageReference Include="libNOM.map" Version="0.8.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="libNOM.map" Version="0.8.3" />
     <PackageReference Include="SpookilySharp" Version="1.2.0" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.IO.Compression" />
   </ItemGroup>
 
